Update backend configs, Kubernetes manifests, and frontend Docker/Nginx setup for Minikube deployment a running webpage 🥳